# PRTS

./: .env.example  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/agent/: pyproject.toml
apps/agent/src/prts_agent/: __init__.py  main.py  runtime.py
apps/agent/src/prts_agent/api/: __init__.py  routes.py
apps/agent/src/prts_agent/llm/: __init__.py  anthropic_client.py  base.py  embedding.py  openai_client.py  tokenizer.py
apps/agent/src/prts_agent/loop/: __init__.py  runner.py
apps/agent/src/prts_agent/mcp/: __init__.py  config.py  invoker.py  manager.py
apps/agent/src/prts_agent/memory/: __init__.py  sqlite.py
apps/agent/src/prts_agent/skills/: __init__.py  loader.py
apps/agent/src/prts_agent/tools/: __init__.py  registry.py
apps/agent/src/prts_agent/workspace/: __init__.py  loader.py
apps/dashboard/: index.html  package.json  vite.config.ts
apps/dashboard/src/: App.tsx
apps/gateway/: package.json  tsconfig.json
apps/gateway/src/: main.ts
apps/gateway/src/adapters/: telegram.ts
apps/gateway/src/session/: id.ts
crates/prts-audio/: Cargo.toml
crates/prts-audio/src/: lib.rs
crates/prts-vector/: Cargo.toml
crates/prts-vector/src/: lib.rs
crates/prts-watcher/: Cargo.toml
crates/prts-watcher/src/: lib.rs  main.rs
infra/: README.md
mcp-servers/prts-workspace/: README.md  pyproject.toml
mcp-servers/prts-workspace/src/prts_workspace_mcp/: __init__.py  server.py
scripts/: dev.ps1  dev.sh  smoke_p3.py  smoke_p4.py  smoke_p4_workspace.py  smoke_p6.py  smoke_p7.py
scripts/_fixtures/: echo_mcp_server.py
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md  mcp.json
workspace/skills/: README.md  add.py  ping.py
workspace/skills/_examples/: weather.py
