[project]
name = "prts-monorepo"
version = "0.1.0"
description = "PRTS monorepo workspace root (uv)"
requires-python = ">=3.12"
authors = [{ name = "zayoka" }]
license = { text = "MIT" }
dependencies = [
    "prts",
    "prts-agent",
]

[tool.uv.workspace]
members = ["apps/agent", "packages/prts-sdk", "mcp-servers/prts-workspace"]

[tool.uv.sources]
prts = { workspace = true }
prts-agent = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
