[package]
name = "prts-watcher"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PRTS 文件 / cron 守护进程(P6 阶段实现)"

[dependencies]
# P6 阶段填充:notify + tokio-cron-scheduler + reqwest + rmcp
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[lib]
path = "src/lib.rs"
