[project]
name = "prts-workspace-mcp"
version = "0.1.0"
description = "PRTS Workspace MCP Server — 暴露 ~/.prts/workspace/*.md 给 MCP client"
requires-python = ">=3.12"
authors = [{ name = "zayoka" }]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.27",
]

[project.scripts]
prts-workspace = "prts_workspace_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prts_workspace_mcp"]
